# eve-pi

./: .gitignore  CLAUDE.md  Caddyfile  README.md  j125227.json  pyproject.toml  r0_p2_coolant_gas.json
docs/superpowers/plans/: 2026-04-05-multi-tier-opportunity-cost.md  2026-04-05-pwnjitsu-dev-infrastructure.md  2026-04-05-volume-aware-shipping.md
docs/superpowers/specs/: 2026-04-04-eve-pi-optimizer-rewrite-design.md  2026-04-05-multi-tier-opportunity-cost-design.md  2026-04-05-pwnjitsu-dev-infrastructure-design.md  2026-04-05-volume-aware-shipping-design.md
eve_pi/capacity/: planet_capacity.py
eve_pi/cli/: formatters.py  main.py  optimize.py  template.py
eve_pi/data/: facilities.yaml  loader.py  materials.yaml  planet_types.yaml  recipes.yaml  system_index.json  system_jumps.json
eve_pi/extraction/: decay.py  yield_calc.py
eve_pi/market/: cache.py  esi.py
eve_pi/models/: characters.py  colonies.py  materials.py  planets.py
eve_pi/optimizer/: allocator.py  feasibility.py  profitability.py  supply_chain.py
eve_pi/systems/: __init__.py  finder.py  pathfinding.py
eve_pi/templates/: converter.py  generator.py  skin.py  topology.py
eve_pi/templates/topologies/: extraction_00.json  extraction_ls.json  factory_2input.json  (+2 more)
eve_pi/web/: app.py
feedback/: 20260404_212039_Vapes.json
tests/: test_allocator.py  test_capacity.py  test_cli.py  test_extraction.py  test_feasibility.py  test_finder.py  test_generator.py  test_integration.py  test_market.py  test_models.py  test_pathfinding.py  test_profitability.py  test_system_index.py  test_templates.py
(+5 files in other folders)
