[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eve-pi"
version = "0.1.0"
description = "EVE Online Planetary Interaction optimizer — library and CLI"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
eve-pi = "eve_pi.cli.main:main"

[tool.setuptools.packages.find]
include = ["eve_pi*"]

[tool.setuptools.package-data]
eve_pi = ["data/*.yaml", "version.txt"]
